--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,17 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apollo-boost": "^0.4.9",
     "bootstrap": "^4.4.1",
+    "concurrently": "^5.3.0",
+    "graphql": "^15.3.0",
+    "graphql-language-service-parser": "^1.6.4",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
