--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "apollo-server-express": "^2.18.2",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "graphql": "^15.3.0",
+    "http-proxy-middleware": "^1.0.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10"
   },
